--- a/style.css
+++ b/style.css
@@ -109,3 +109,19 @@ button {
     width: 95%;
     padding: 12px;
 }
+
+/*Now*/
+
+.backvideo{
+    display: flex;
+    justify-content: center; /* Centers horizontally */
+    align-items: flex-start; /* Aligns to the top */
+}
+
+#gameVideo {
+    width: 90%;
+    border-radius: 10px;
+    transform: scale(0.33); /* 1/3 of original size */
+    transform-origin: top; /* Keeps video centered */
+    padding-top: 20px;
+}
